Configure Scrutinizer CI to perform code rating

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -12,3 +12,8 @@ tools:
   php_hhvm: true
   php_analyzer: true
   php_pdepend: true
+
+checks:
+    php:
+        code_rating: true
+        duplication: true
