--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": "^7"
     },
     "autoload": {
         "psr-4": {"Clippings\\Freezable\\": "src/"}
@@ -22,5 +22,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.3"
+    },
+    "config": {
+        "platform": {
+            "php": "7.0"
+        }
     }
 }
